# palindrome-policy-rust

./: Cargo.toml  Makefile  README.md  e2e.bats  hub.yml  metadata.yml
.github/workflows/: release.yml  release.yml.template
src/: lib.rs  settings.rs  validate.rs
src/tests/: mod.rs  settings.rs  validate.rs
test_data/: pod-palindrome.json  pod.json  pod_no_pal.json  pod_pal.json
