[package]
authors = ["Enrico Candino <enrico.candino@gmail.com>"]
edition = "2018"
name = "palindrome-policy-rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = {version = "0.11.0", features = ["v1_20"]}
kubewarden = {package = "kubewarden-policy-sdk", version = "0.2.3"}
lazy_static = "1.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
slog = "2.7"
wapc = {package = "wapc-guest", version = "0.4.0"}
